# first-project

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  coverage.ps1  profile.ps1
.github/workflows/: ci.yml
src/: add.cpp  add.h  main.cpp
test/: test_add.cpp
